# kestrelpy

./: pyproject.toml
kestrelpy/: kestrel.py
tests/: test_kestrel.py
